added project title to login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,8 +6,8 @@
 
 <body>
    <!-- <%- include('./common/navbar.ejs') %> -->
-
-    <main>
+    <h1><b>XSSS</b></h1>
+    <!-- <main> -->
         <form class="form-card" id="login-form" action="" method="POST">
             <h2>Log In</h2>
             <div class="form-control">
@@ -48,6 +48,6 @@
                 <a href="#" id="login-toggle">Login</a>
             </div>
         </form>
-    </main>
+    <!-- </main> -->
     <script src="/js/login.js"></script>
 <%- include('./common/end.ejs') %>
