--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,35 +1,40 @@
-.main-header {
-  width: 100%;
-  height: 3.5rem;
-  background-color: #00695c;
-  padding: 0 1.5rem;
-}
-
-.main-header__nav {
-  height: 100%;
+.navbar {
+  background-color: #333;
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.main-header__item-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-.main-header__item {
-  margin: 0 1rem;
-  padding: 0;
-}
-
-.main-header__item a {
-  text-decoration: none;
+.navbar a {
+  float: left;
+  display: block;
   color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
 }
 
-.main-header__item a:hover,
-.main-header__item a:active,
-.main-header__item a.active {
-  color: #ffeb3b;
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+a.active {
+  background-color: #04AA6D;
+}
+
+.logout-form input[type="submit"] {
+  background-color: #aaa204;
+  color: white;
+  border: none;
+  padding: 14px 20px;
+  text-align: center;
+  display: inline-block;
+  cursor: pointer;
+  margin-right: 6px;
+  height: 100%;
+}
+
+.logout-form input[type="submit"]:hover {
+  background-color: #ddd;
 }
