--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -2,7 +2,7 @@
   <div>
     <a class="<%= path === '/' ? 'active' : ''%>"class="active" href="/">Home</a>
     <a class="<%= path === '/forum' ? 'active' : ''%>"class="active" href="/forum">Jason</a>
-    <a class="<%= path === '/sql-injection' ? 'active' : ''%>"class="active" href="/sqk-injection">Qiyu</a>
+    <a class="<%= path === '/sql-injection' ? 'active' : ''%>"class="active" href="/sql-injection/login">Qiyu</a>
     <a class="<%= path === '/reflected' ? 'active' : ''%>"class="active" href="/reflected">Chris</a>
     <a class="<%= path === '/xsrf' ? 'active' : ''%>"class="active" href="/xsrf">Ilam</a>
   </div>
