--- a/views/bank.ejs
+++ b/views/bank.ejs
@@ -20,43 +20,31 @@
                 </header>
 
                 <main>
-                    <div class="account-info">
-                        <h2>Account Information</h2>
-                        <p id="name">Account Holder: <%= name%>
-                        </p>
-                        <!-- <p>Account Number: XXXX-XXXX-XXXX-1234</p> -->
-                        <p id="balance">Balance: $<%= balance%>
-                        </p>
-                    </div>
-                    <div class="transaction-form">
-                        <form class="form-card" id="login-form" action="/bank/transfer" method="GET">
-                            <h2>Make a Transaction (GET)</h2>
-                            <div class="form-control">
-                                <label for="account">Account:</label>
-                                <input type="text" id="amount" name="account" placeholder="Enter account username">
-                            </div>
-                            <div class="form-control">
-                                <label for="amount">Amount:</label>
-                                <input type="text" id="amount" name="amount" placeholder="Enter amount">
-                            </div>
-                            <button class="btn" type="submit">Submit</button>
-                        </form>
+
+                    <div class="container">
+                        <nav class="left-menu">
+                            <a class="forum-topic <%= topic === 'account' ? 'active' : ''%>" data-topic="account"
+                                href="/bank/account"
+                                data-intro="Here you can see some stored XSS attack examples.">Account Details</a>
+                            <a class="forum-topic <%= topic === 'playground' ? 'active' : ''%>" data-topic="play-ground"
+                                href="/forum/playground"
+                                data-intro="Here you can see malicious posts made by your and other students.">Playground</a>
+                            <a class="forum-topic <%= topic === 'safe-space' ? 'active' : ''%>" data-topic="safe-space"
+                                href="/forum/safe-space" data-intro="Here malicious posts won't work anymore!">Safe
+                                Space</a>
+                        </nav>
+
+                        <div class="forum-container <%= topic %>">
+                            <% if (topic==='unsafe-space' ) { %>
+                                <%- include('./bank-pages/account.ejs') %>
+                                    <%} else if (topic==='playground' ) {%>
+                                        <%- include('./bank-pages/get-transaction.ejs') %>
+                                            <%} else if (topic==='safe-space' ) {%>
+                                                <%- include('./bank-pages/post-transaction.ejs') %>
+                                                    <%}%>
+                        </div>
                     </div>
 
-                    <div class="transaction-form">
-                        <form class="form-card" id="login-form" action="/bank/transfer" method="POST">
-                            <h2>Make a Transaction (POST)</h2>
-                            <div class="form-control">
-                                <label for="account">Account:</label>
-                                <input type="text" id="amount" name="account" placeholder="Enter account username">
-                            </div>
-                            <div class="form-control">
-                                <label for="amount">Amount:</label>
-                                <input type="text" id="amount" name="amount" placeholder="Enter amount">
-                            </div>
-                            <button class="btn" type="submit">Submit</button>
-                        </form>
-                    </div>
 
                 </main>
 
