--- a/views/bank.ejs
+++ b/views/bank.ejs
@@ -16,7 +16,7 @@
 
             <body>
                 <header>
-                    <h1>Welcome to My Bank</h1>
+                    <h1>Welcome to Dumb Bank</h1>
                 </header>
 
                 <main>
@@ -63,7 +63,7 @@
 
 
                 <footer>
-                    <p>&copy; 2023 My Bank</p>
+                    <p>&copy; 2023 Dumb Bank</p>
                 </footer>
 
                 <%- include('./common/end.ejs') %>
