small text change

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 <body>
 <%- include('./common/navbar.ejs') %>
     <header>
-        <h1>Welcome to XSS Attack Simulations</h1>
+        <h1>Welcome to Web Injection Attack Sandbox</h1>
         <h4>Made by Chris, Qiyu, Ilam, and Jason</h4>
     </header>
 
@@ -14,7 +14,7 @@
         <section id="introduction">
             <h2>About Our Project</h2>
             <p>
-                Learn about web security through interactive XSS attack simulations! Our project provides a hands-on experience for students to understand and defend against different types of XSS attacks.
+                Learn about web security through interactive injection attack simulations! Our project provides a hands-on experience for students to understand and defend against different types of injection attacks.
             </p>
         </section>
 
@@ -33,7 +33,7 @@
                 <p>Learn about SQL injection vulnerabilities by hacking into a simulated store's database.</p>
             </div>
             <div id="xsrf-attack">
-                <h3>XSRF Attack</h3>
+                <h3>CSRF Attack</h3>
                 <p>Explore Cross-Site Request Forgery in a banking context and learn to secure transactions.</p>
             </div>
         </section>
@@ -41,7 +41,7 @@
         <section id="learning-objectives">
             <h2>What You Will Learn</h2>
             <div>
-                <p>Identifying various XSS vulnerabilities</p>
+                <p>Identifying various injection vulnerabilities</p>
                 <p>Understanding the attacker's perspective</p>
                 <p>Implementing effective security measures</p>
                 <p>Hands-on experience with real-world scenarios</p>
