--- a/views/bank.ejs
+++ b/views/bank.ejs
@@ -22,10 +22,16 @@
 
                 <main>
                     <div class="tabs">
-                        <button class="tab-button" onclick="openTab('account-info')">Account Information</button>
-                        <button class="tab-button" onclick="openTab('transaction-get')">Make a Transaction
+                        <button class="tab-button"
+                            data-hint="Here you can view your account information with your name and balance."
+                            data-hint-position="top-right" onclick="openTab('account-info')">Account
+                            Information</button>
+                        <button class="tab-button" data-hint="Inspect the code to see how the transaction is made."
+                            data-hint-position="top-right" onclick="openTab('transaction-get')">Make a Transaction
                             (GET)</button>
-                        <button class="tab-button" onclick="openTab('transaction-post')">Make a Transaction
+                        <button class="tab-button"
+                            data-hint="You might think this is hard, but it is actually very easy. Inspect the code to see how the transaction is made."
+                            data-hint-position="top-right" onclick="openTab('transaction-post')">Make a Transaction
                             (POST)</button>
                     </div>
 
@@ -41,15 +47,16 @@
 
                     <div class="tab-content" id="transaction-get">
                         <div class="transaction-form">
-                            <form class="form-card" id="login-form" action="/bank/transfer" method="GET">
+                            <form class="form-card" id="login-form-get" action="/bank/transfer" method="GET">
                                 <h2>Make a Transaction (GET)</h2>
                                 <div class="form-control">
                                     <label for="account">Account:</label>
-                                    <input type="text" id="amount" name="account" placeholder="Enter account username">
+                                    <input type="text" id="amount-get" name="account"
+                                        placeholder="Enter account username">
                                 </div>
                                 <div class="form-control">
                                     <label for="amount">Amount:</label>
-                                    <input type="text" id="amount" name="amount" placeholder="Enter amount">
+                                    <input type="text" id="amount-get" name="amount" placeholder="Enter amount">
                                 </div>
                                 <button class="btn" type="submit">Submit</button>
                             </form>
@@ -58,20 +65,25 @@
 
                     <div class="tab-content" id="transaction-post">
                         <div class="transaction-form">
-                            <form class="form-card" id="login-form" action="/bank/transfer" method="POST">
+                            <form class="form-card" id="login-form-post" action="/bank/transfer" method="POST">
                                 <h2>Make a Transaction (POST)</h2>
                                 <div class="form-control">
                                     <label for="account">Account:</label>
-                                    <input type="text" id="amount" name="account" placeholder="Enter account username">
+                                    <input type="text" id="amount-post" name="account"
+                                        placeholder="Enter account username">
                                 </div>
                                 <div class="form-control">
                                     <label for="amount">Amount:</label>
-                                    <input type="text" id="amount" name="amount" placeholder="Enter amount">
+                                    <input type="text" id="amount-post" name="amount" placeholder="Enter amount">
                                 </div>
                                 <button class="btn" type="submit">Submit</button>
                             </form>
                         </div>
                     </div>
+
+                    <p>Your objective make someone from the bank forum to make a transaction to your account using both
+                        get and post requests.
+                    </p>
                 </main>
 
                 <footer>
@@ -80,17 +92,5 @@
 
                 <%- include('./common/end.ejs') %>
 
-                    <script>
-                        openTab("account-info")
-                        function openTab(tabName) {
-                            const tabs = document.querySelectorAll('.tab-content');
-                            tabs.forEach(tab => tab.style.display = 'none');
-
-                            const selectedTab = document.getElementById(tabName);
-                            if (selectedTab) {
-                                selectedTab.style.display = 'block';
-                            }
-                        }
-                    </script>
-
+                    <script src="/js/bank.js"> </script>
             </body>
