--- a/views/sql-injection/knowledge.ejs
+++ b/views/sql-injection/knowledge.ejs
@@ -2,6 +2,7 @@
     <link rel="stylesheet" href="/css/sql-injection/knowledge.css"> 
 </head>
 <body>
+    <%- include('../common/navbar.ejs') %>
     <div class="container">
         <h1>Understanding SQL Injection</h1>
 
