bank name changed

--- a/views/bank.ejs
+++ b/views/bank.ejs
@@ -17,7 +17,7 @@
 
             <body>
                 <header>
-                    <h1>Welcome to Dumb Bank</h1>
+                    <h1>Welcome to SecureFunds Bank</h1>
                 </header>
 
                 <main>
@@ -87,7 +87,7 @@
                 </main>
 
                 <footer>
-                    <p>&copy; 2023 Dumb Bank</p>
+                    <p>&copy; 2023 SecureFunds Bank</p>
                 </footer>
 
                 <%- include('./common/end.ejs') %>
