added OWASP page as hint

--- a/views/bank.ejs
+++ b/views/bank.ejs
@@ -82,7 +82,9 @@
                     </div>
 
                     <p>Your objective make someone from the bank forum to make a transaction to your account using both
-                        get and post requests.
+                        get and post requests. <br>
+                        Here is the <a href="https://owasp.org/www-community/attacks/csrf">OWASP
+                            page</a> for more hints and guidelines on how to defend against this attack.
                     </p>
                 </main>
 
